# shadertoy

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  index.html
.github/workflows/: deploy.yml
docs/plans/: 2026-03-02-glsl-notebook-ide-design.md
examples/: examples.glsl
src/: app.rs  gl_utils.rs  highlight.rs  main.rs  shader.rs  theme.rs
